--- a/trains.html
+++ b/trains.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <title>Trains</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
+    <!-- Firebase References -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js"></script>
+
+    <!-- Moment.js Reference -->
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
 
 </head>
 
@@ -13,7 +24,7 @@
     <div class="container">
         <br>
         <!-- Jumbotron -->
-        <div class="jumbotron">
+        <div class="jumbotron" style="background-color: black; color: white">
             <h1 class="text-center">Anytime is Train Time</h1>
         </div>
         <table class="table">
@@ -27,7 +38,7 @@
 
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="new-train">
                 <tr>
                     <th scope="row">Midnight</th>
                     <td>Anywhere</td>
@@ -49,12 +60,15 @@
                     <td>09:45 PM</td>
                     <td>495</td>
                 </tr>
+                <tr id="new-train">
+
+                </tr>
                 <tr>
-                    <th scope="row" id="name-data"></th>
-                    <td id="dest-data"></td>
-                    <td id="freq-data"></td>
-                    <td id="firstTrainTime-data"></td>
-                    <td id="minUntilNext-data"></td>
+                    <th scope="row" id="name-display"></th>
+                    <td id="dest-display"></td>
+                    <td id="freq-display"></td>
+                    <td id="nextTrainTime-display"></td>
+                    <td id="minUntilNext-display"></td>
                 </tr>
 
             </tbody>
@@ -83,20 +97,13 @@
         </form>
 
     </div>
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!--Moment.js-->
-    <script src="https://momentjs.com/downloads/moment.min.js"></script>
 
-    <!-- LINKS FOR FIREBASE GO HERE -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js"></script>
     <!-- Script -->
     <script>
         //  START CODING BELOW!!
-
+        // $(document).ready(function() {
         // Initialize Firebase
-        const firebaseConfig = {
+        let firebaseConfig = {
             apiKey: "AIzaSyDwNylk7AZd_2kvyFflaLnseJN0flTZ1_8",
             authDomain: "firstproj-b65e0.firebaseapp.com",
             databaseURL: "https://firstproj-b65e0.firebaseio.com",
@@ -109,60 +116,78 @@
         firebase.initializeApp(firebaseConfig);
 
         // Create a variable to reference the database
-        const database = firebase.database();
+        let database = firebase.database();
+
+        let name = "";
+        let dest = "";
+        let firstTrainTime = "";
+        let freq = "";
+        // let arrTimeArray = [];
+
 
         // Capture Button Click
         $("#add-train").on("click", function(event) {
             // Don't refresh the page!
             event.preventDefault();
 
-            // YOUR TASK!!!
+            name = $("#name-input").val().trim();
+            dest = $("#dest-input").val().trim();
+            firstTrainTime = moment($("#firstTrainTime-input").val().trim(), "HH:MM").format("HH:MM");
+            freq = $("#freq-input").val().trim();
 
-            // Code in the logic for storing and retrieving the most recent user.
-            database.ref().on("value", function(data) {
+            //insert code to generate train schedule from inputs
 
-                // Print the initial data to the console.
-                console.log(data.val());
-                name = $("#name-input").val().trim();
-                dest = $("#dest-input").val().trim();
-                firstTrainTime = $("#firstTrainTime-input").val().trim();
-                freq = $("#freq-input").val().trim();
-                $("#name-data").text(name);
-                $("#dest-data").text(dest);
-                $("#firstTrainTime-data").text(firstTrainTime);
-                $("#freq-data").text(freq);
-                $("#minUntilNext-data").text("TBD");
-
-                // Don't forget to provide initial data to your Firebase database.
-                database.ref().push({
-                    name: name,
-                    dest: dest,
-                    firstTrainTime: firstTrainTime,
-                    freq: freq
-                })
-
+            database.ref().push({
+                name: name,
+                dest: dest,
+                firstTrainTime: firstTrainTime,
+                freq: freq //add comma back in when array below set
+                    // arrTimeArray: [firstTrainTime + freq]
             });
 
+            console.log(name.name);
+            console.log(dest.dest);
+            console.log(firstTrainTime.firstTrainTime);
+            console.log(freq.freq);
+            alert("Train added");
+
+            database.ref().on("child_added", function(childSnapshot) {
+                console.log(childSnapshot.val());
+
+                let newTrain = $("<tr>").append(
+                    $("<td>").text(name),
+                    $("<td>").text(dest),
+                    $("<td>").text(firstTrainTime),
+                    $("<td>").text(freq),
+                    $("<td>").text("TBD")
+                );
+                $("#new-train").append(newTrain);
+            });
+
+            // // // Code in the logic for storing and retrieving the most recent user.
+            // database.ref().on("value", function(data) {
+
+            //     // Print the initial data to the console.
+            //     console.log(data.val());
+            //     console.log(data.val().name);
+            //     console.log(data.val().dest);
+            //     console.log(data.val().firstTrainTime);
+            //     console.log(data.val().freq);
+            //     // console.log(data.val()).arrTimeArray;
+            //     $("#name-display").text(data.val().name);
+            //     $("#dest-display").text(data.val().dest);
+            //     $("#firstTrainTime-display").text(data.val().firstTrainTime);
+            //     $("#freq-display").text(data.val().freq);
+            //     // Handle the errors
+            // }, function(errorObject) {
+            //     console.log("Errors handled: " + errorObject.code);
+            // });
+
+
+            //moment().endOf('day').fromNow();          // in 13 hours
+            //moment().startOf('hour').fromNow();       // 6 minutes ago
+
         });
-        // Firebase watcher + initial loader HINT: .on("value")
-
-        database.ref().on("value", function(data) {
-
-            // Print the initial data to the console.
-            console.log(data.val());
-            $("#name-display").text(data.val().name);
-            $("#dest-display").text(data.val().dest);
-            $("#firstTrainTime-display").text(data.val().time);
-            $("#freq-display").text(data.val().freq);
-
-            // Don't forget to provide initial data to your Firebase database.
-        });
-
-        // Create Error Handling
-
-
-        //moment().endOf('day').fromNow();          // in 13 hours
-        //moment().startOf('hour').fromNow();       // 6 minutes ago
     </script>
 </body>
 
